--- a/Source/Web/css/style.css
+++ b/Source/Web/css/style.css
@@ -68,7 +68,7 @@ cite {
 
 .slogan span {
     display: inline-block; 
-    margin: 8px;
+    margin-top: 8px;
     background-color: #569FEC;
     border-radius: 8px 20px 0 0;
     padding: 0 5px 0 2px;
