--- a/Source/Web/css/style.css
+++ b/Source/Web/css/style.css
@@ -288,7 +288,8 @@ cite {
     margin-bottom: 0;
 }
 
-.tooltip .header.cource {
+.tooltip .header.cource,
+.tooltip .header.group {
     border-bottom: 0;
     padding-bottom: 0;
     margin-bottom: 0;
