--- a/Source/Web/css/style.css
+++ b/Source/Web/css/style.css
@@ -12,46 +12,8 @@ cite {
     font-style: italic;
 }
 
-.spacer5 {
-    clear:both;height: 5px;
-}
-
-.centered {
-    text-align: center;
-}
-
 .clearfix {
     clear: both;
-}
-
-.voffset {
-    margin: .5em 0;
-}
-
-.roffset {
-    margin-right: .5em;
-}
-
-.huge {
-    font-size: 2em;
-}
-
-.caret {
-    opacity: .8;
-}
-
-.small {
-    font-size: .85em;
-}
-
-.tags span {
-    padding: .4em;
-    margin-bottom: .5em;
-    font-size: 1.1em;7
-}
-
-.tags a {
-    color: #fff;
 }
 
 .navbar-brand.site-name {
@@ -98,75 +60,6 @@ cite {
     height: 30px;
 }
 
-.share a {
-    font-size: 20px;
-}
-
-.modal-large {
-    width: 76%;
-    margin-left: -38%;
-}
-
-.col-md-4 h5 {
-    height: 1.4em;
-    overflow: hidden;
-}
-
-.gallery h5 {
-    height: 30px;
-    overflow: hidden;
-}
-
-.gallery img {
-    height: 200px;
-}
-
-.gallery-lg img {
-    height: 400px;
-}
-
-.vis-preview {
-    margin-bottom: 1em;
-}
-
-.typeahead:focus {
-    border: 2px solid #0097cf;
-}
-
-.tt-hint {
-    color: #999
-}
-
-.tt-dropdown-menu {
-    min-width: 300px;
-    margin-top: 12px;
-    padding: 8px 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-    -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-    box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
-
-.tt-suggestion {
-    padding: 3px 20px;
-    font-size: 15px;
-    line-height: 20px;
-}
-
-.tt-suggestion.tt-cursor {
-    color: #fff;
-    background-color: #0097cf;
-}
-
-.tt-suggestion p {
-    margin: 0;
-}
-
 .sigma-parent {
     height: 600px;
     position: relative;
@@ -181,12 +74,7 @@ cite {
     left: 0;
 }
 
-.ad h3 {
-    font-size: 1.2em;
-    margin: -.5em 0 0 0;
-}
-
-#loading {
+.loading {
     position: absolute;
     left: 30%;
     top: 25%;
@@ -196,15 +84,6 @@ cite {
     display: none;
 }
 
-#nodeinfo {
-    display: none;
-    position: absolute;
-    right: 5px;
-    top: 58px;
-    max-width: 350px;
-    opacity: .8;
-}
-
 .tooltip {
     display: none;
     opacity: 0;
@@ -212,21 +91,20 @@ cite {
     width: 250px;
     font: 13px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: rgb(34, 36, 38);
+    color: #222426;
     overflow: hidden;
     z-index: 1002;
 }
 
 .tooltip .content {
-    /*pointer-events: none;  required for d3 */
     position: relative;
     font-size: 12px;
     padding: 10px;
-    background: rgb(80, 80, 80);
-    border: 1px solid rgb(28, 28, 28);
+    background: #505050;
+    border: 1px solid #1C1C1C;
     border-radius: 2px 2px 2px 2px;
     box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 3px 0px;
-    color: rgb(227, 227, 227);
+    color: #E3E3E3;
     z-index: 320;
 }
 
@@ -235,9 +113,9 @@ cite {
     padding: 0px 0px 8px;
     font-size: 12px;
     font-weight: bold;
-    color: rgb(255, 255, 255);
+    color: #FFFFFF;
     text-align: left;
-    border-bottom: 1px solid rgb(114, 114, 114);
+    border-bottom: 1px solid #727272;
 }
 
 .tooltip .header.user {
@@ -290,7 +168,7 @@ cite {
 .tooltip .user-link {
     font-size: 18px;
     color: #e2e2e2!important;
-    text-decoration: none;    
+    text-decoration: none;
     font-weight: bold;
 }
 
@@ -323,19 +201,19 @@ cite {
 
 .tooltip .favorite {
     font-size: 13px;
-    color: rgb(253, 202, 92);
+    color: #FDCA5C;
     cursor: pointer;
     text-decoration: none;
 }
 
 .tooltip .sub-links {
     display: block;
-    float: right;    
+    float: right;
     width: 50px;
     height: 16px;
     font-size: 12px;
     font-weight: normal;
-    color: rgb(114, 114, 114);
+    color: #727272;
     text-align: right;
 }
 
@@ -345,7 +223,7 @@ cite {
 
 .tooltip .sub-links a,
 .tooltip .sub-links a:visited {
-    color: rgb(255, 153, 51);
+    color: #FF9933;
     cursor: pointer;
     text-decoration: none;
 }
@@ -355,16 +233,4 @@ cite {
     font-size: 11px;
     overflow-wrap: break-word;
     word-wrap: break-word;
-}
-
-.tooltip .footer {
-    font-size: 11px;
-    color: rgb(180, 212, 236);
-}
-
-.tooltip .footer a,
-.tooltip .footer a:visited {
-    color: rgb(180, 212, 236);
-    cursor: pointer;
-    text-decoration: none;
 }
