--- a/Source/Web/css/style.css
+++ b/Source/Web/css/style.css
@@ -35,7 +35,7 @@ cite {
 
 .slogan {
     display: inline-block;
-    font-size: 0.9em;
+    font-size: 21px;
     margin-top: 10px;
     margin-left: 120px;
 }
